Kubernetes/Ingress/multi-domain-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: api.devops.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-api-svc
            port:
              number: 3000
  - host: admin.devops.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: admin-panel
            port:
              number: 8080
